--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <!-- 添加更多模型 -->
   </div>
   <div id="dialog">
-    <label for="scale">模型大小比例：</label>
-    <input type="number" id="scale" value="1" min="0.1" step="0.1" />
+    <label for="scale">模型标题：</label>
+    <input type="text" id="title" type="text" />
     <br />
     <label for="description">模型说明信息：</label>
-    <input type="text" id="description" />
+    <input type="texture" id="description" />
     <br />
     <button id="confirm">确认</button>
   </div>
